0.8.0/_sources/gallery/spherical_points.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/spherical_points.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_spherical_points.py:


Spherical points
================

.. tags:: experimental

.. GENERATED FROM PYTHON SOURCE LINES 7-34



.. image-sg:: /gallery/images/sphx_glr_spherical_points_001.png
   :alt: spherical points
   :srcset: /gallery/images/sphx_glr_spherical_points_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /home/runner/work/docs/docs/.venv/lib/python3.12/site-packages/napari/_qt/qt_event_loop.py:50: UserWarning: System theme detection requires a Qt6 backend. Please switch to PyQt6 or PySide6 to use it.
      theme_type=get_system_theme(),






|

.. code-block:: Python

    import numpy as np

    import napari

    np.random.seed()

    pts = np.random.rand(100, 3) * 100
    colors = np.random.rand(100, 3)
    sizes = np.random.rand(100) * 20 + 10

    viewer = napari.Viewer(ndisplay=3)
    pts_layer = viewer.add_points(
        pts,
        face_color=colors,
        size=sizes,
        shading='spherical',
        border_width=0,
    )

    # antialiasing is currently a bit broken, this is especially bad in 3D so
    # we turn it off here
    pts_layer.antialiasing = 0

    viewer.reset_view()

    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_spherical_points.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: spherical_points.ipynb <spherical_points.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: spherical_points.py <spherical_points.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: spherical_points.zip <spherical_points.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
